fix sercuryty